# ECMLPKDD2026

./: README.md
llm/: pyproject.toml
llm/dataset_assets/additional_variable_info/: aids_clinical_trials_group_study_175_additional_variable_info.txt  banknote_authentication_additional_variable_info.txt  census_income_additional_variable_info.txt  contraceptive_method_choice_additional_variable_info.txt  haberman's_survival_additional_variable_info.txt  heart_disease_additional_variable_info.txt  occupancy_detection_additional_variable_info.txt  risk_factor_prediction_of_chronic_kidney_disease_additional_variable_info.txt  spectf_heart_additional_variable_info.txt  statlog_(german_credit_data)_additional_variable_info.txt
llm/dataset_assets/dataset_overview/: adult_overview.txt  aids_clinical_trials_group_study_175_overview.txt  bank_marketing_overview.txt  banknote_authentication_overview.txt  census_income_overview.txt  contraceptive_method_choice_overview.txt  haberman's_survival_overview.txt  heart_disease_overview.txt  occupancy_detection_overview.txt  risk_factor_prediction_of_chronic_kidney_disease_overview.txt  spectf_heart_overview.txt  statlog_(german_credit_data)_overview.txt
llm/dataset_assets/variable_description/: aids_clinical_trials_group_study_175_variable_description.json  (+10 more)
llm/prompt/: abstraction_prompt.md  preprocess_prompt.md  sc_prompt.md
llm/scripts/: run_step1.py  run_step2.py  run_step3.py  run_step4.py  run_step5.py
llm/src/: gemini_cli_processor.py
llm/src/llm_api/: __init__.py  (+6 more)
python/ablation_study/: .gitignore  pyproject.toml
(+111 files in other folders)
