[project]
name = "sign-constraint-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.49.0",
    "google-genai>=1.5.0",
    "numpy>=2.0.0",
    "openai>=1.66.0",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
]
